@@ -1,3 +1,6 @@
+From version 0.6.2 to ???
+- server media proxy for NAT support.
+
 From version 0.6.1 to 0.6.2
 - only create extensions for generated accounts if using extension dialing.
 - can change uid setting when server is live.
